# unipi-control

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .yamllint.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  config  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: build-deploy.yml  build.yml  checks.yml  ci.yml  deploy.yml  dev-build.yml  parameters.json  publish.yml  pylint.yml  python-publish.yml  python-test-publish.yml  release-build.yml  test-python-package.yml  test.yml  tests.yml  upload-python-package.yml
config/etc/systemd/system/: unipi-control.service
config/etc/unipi/: control.yaml
config/etc/unipi/hardware/extensions/: Eastron_SDM120M.yaml
data/: Dockerfile
data/opkg/control/: postinst  prerm
docs/: commands.md  configuration.md  mqtt-topics.md  supported-hardware.md
extras/config/etc/systemd/system/: unipi-control.service
extras/homeassistant/blueprints/automation/cover/: control.yaml  simple_cover_control.yaml
opkg/control/: control
scripts/: entry.sh
src/etc/uma/: api.yaml  homeassistant.yaml
src/etc/umc/: client.yaml
src/etc/umc/hardware/extension/: IAQ.yaml  xG18.yaml  xS11.yaml
src/etc/umc/hardware/neuron/: M203.yaml
src/etc/umc/hw_definitions/: CUSTOM_MODBUS_DEVICE.yaml  xS10.yaml  xS30.yaml  xS40.yaml  xS50.yaml  xS51.yaml
src/etc/umc/hw_definitions/BuiltIn/: L203.yaml  L205.yaml  L207.yaml  L303.yaml  L503.yaml  L505.yaml  L513.yaml  L525.yaml  L527.yaml  M103.yaml  M205.yaml  M207.yaml  M265.yaml  M267.yaml  M303.yaml  M503.yaml  M505.yaml  M515.yaml  M523.yaml  M525.yaml  M527.yaml  M535.yaml  M565.yaml  M567.yaml  M603.yaml  S103.yaml  S105.yaml  S107.yaml  S115.yaml  S117.yaml  S155.yaml  S165.yaml  S167.yaml  S175.yaml  S205.yaml  S207.yaml  (+3 more)
src/etc/unipi/: control.yaml  mqtt-client.yaml
src/lib/systemd/system/: uma.service  umc.service
src/uma/: MANIFEST.in  __init__.py  requirements.txt  run.py  setup.cfg  setup.py
src/uma/api/: devices.py  homeassistant.py  mqtt.py  settings.py
src/uma/uma/: __init__.py  run.py
src/uma/uma/api/: __init__.py  settings.py
src/umc/: __init__.py  config.py  devices.py  helpers.py  homeassistant.py  modbus.py  neuron.py  run.py  run2.py  utils.py
src/umc/api/: __init__.py  devices.py
src/umc/plugins/: covers.py  devices.py  homeassistant.py
src/umc/umc/: config.py  devices.py  neuron.py
src/unipi_control/: __init__.py  config.py  covers.py  devices.py  features.py  helpers.py  logging.py  modbus.py  model_info.py  neuron.py  run.py  unipi_control.py  version.py
src/unipi_control/extensions/: eastron.py
src/unipi_control/helpers/: text.py  yaml.py
src/unipi_control/integrations/: covers.py
src/unipi_control/modbus/: cache.py  devices.py.backup
src/unipi_control/mqtt/: features.py
src/unipi_control/mqtt/discovery/: base.py  binary_sensors.py  covers.py  mixin.py  sensors.py  switches.py
src/unipi_control/mqtt/integrations/: covers.py
src/unipi_control/plugins/: covers.py  devices.py  features.py
src/unipi_control/plugins/hass/: binary_sensors.py  covers.py  discover.py  switches.py
src/unipi_control/plugins/modbus/: devices.py
src/unipi_control/tools/: config_backup.py  config_converter.py  model_info.py
systemd/: unipi-mqtt-api.service
tests/: .coverage  conftest.py  conftest_data.py
tests/integration/: test_unipi_control.py
tests/integration/tools/: test_config_backup.py  test_config_converter.py  test_config_converter_data.py  test_model_info.py
tests/unit/: conftest.py  conftest_data.py  test_config.py  test_config_data.py  test_features.py  test_modbus.py  test_neuron.py  test_unipi_control.py
tests/unit/integrations/: test_covers.py
tests/unit/mqtt/: test_features.py
tests/unit/mqtt/discovery/: test_binary_sensors.py  test_binary_sensors_data.py  test_covers.py  test_sensors.py  test_sensors_data.py  test_switches.py  test_switches_data.py
tests/unit/mqtt/integrations/: test_covers.py  test_covers_data.py
tests/unit/tools/: test_config_backup.py  test_config_converter.py  test_config_converter_data.py
tests/unittests/: conftest.py  conftest_data.py  test_config.py  test_config_data.py  test_covers.py  test_features.py  test_helpers.py  test_modbus.py  test_neuron.py  test_unipi_control.py  test_unipi_control_data.py
tests/unittests/integrations/: test_covers.py
tests/unittests/mqtt/: test_features.py
tests/unittests/mqtt/discovery/: test_binary_sensors.py  test_binary_sensors_data.py  test_covers.py  test_sensors.py  test_sensors_data.py  test_switches.py  test_switches_data.py
tests/unittests/plugins/: test_features.py
tests/unittests/plugins/hass/: test_binary_sensors.py  test_covers.py  test_switches.py
tests/unittests/tools/: test_config_converter.py  test_config_converter_data.py
unipi/: .unipi-async.py.swp  api.py  config.py  config.yaml  controller.py  devices.py  helpers.py  log.py  mqtt.py  observer.py  run.py  settings.py  sysfs.py  test-publish.py  test.py  unipi-async.py  unipi-mqtt.py
unipi/api/: devices.py  homeassistant.py  mqtt.py  settings.py
unipi/configs/: api.yaml  ha.yaml  home-assistant.yaml
unipi_control/: __init__.py  config.py  exception.py  features.py  modbus.py  neuron.py  typing.py  unipi_control.py
unipi_control/devices/: eastron.py  unipi.py  unipi_board.py
unipi_control/extensions/: eastron.py
unipi_control/features/: constants.py  eastron.py  extensions.py  map.py  neuron.py  unipi.py  utils.py
unipi_control/hardware/: constants.py  eastron.py  info.py  map.py  unipi.py  unipi_board.py
unipi_control/helpers/: argparse.py  decorators.py  exception.py  log.py  text.py  typing.py  yaml.py
unipi_control/integrations/: covers.py
unipi_control/modbus/: helper.py  helpers.py
unipi_control/mqtt/: features.py  helper.py  helpers.py
unipi_control/mqtt/discovery/: binary_sensors.py  covers.py  mixin.py  sensors.py  switches.py
unipi_control/mqtt/integrations/: covers.py
unipi_control/tools/: config_backup.py  config_converter.py  model_info.py
(+36 files in other folders)
