[bdist_wheel]
universal = 0

[metadata]
name = unipi-control
version = attr: unipi_control.__version__
description = Control Unipi I/O directly with MQTT commands and without Evok.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mh-superbox/unipi-control
author = Michael Hacker
author_email = mh@superbox.one
license = MIT
license_files =
    LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    asyncio-mqtt~=0.12.1
    paho-mqtt~=1.6.1
    pymodbus~=2.5.3
    PyYAML~=6.0

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    unipi-control = unipi_control.run:main
    unipi-model-info = unipi_control.model_info:main

[flake8]
max-line-length = 120
max-complexity = 12

extend-ignore = D,E501,W503,W504
