[bdist_wheel]
universal = 0

[metadata]
name = unipi-control
version = attr: unipi_control.__version__
description = Control Unipi I/O directly with MQTT commands.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/superbox-dev/unipi-control
author = Michael Hacker
author_email = mh@superbox.one
license_files =
    LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Operating System :: POSIX :: Linux
    Topic :: System :: Networking
    Topic :: Utilities
project_urls =
    Source Code = https://github.com/superbox-dev/unipi-control
    Bug Reports = https://github.com/superbox-dev/unipi-control/issues

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.8

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    unipi-control = unipi_control.unipi_control:main
    unipi-model-info = unipi_control.tools.model_info:main
    unipi-config-converter = unipi_control.tools.config_converter:main

[flake8]
max-line-length = 120
noqa-require-code = True
docstring-convention = numpy

# D100 Missing docstring in public module
# D101: Missing docstring in public class
# D104 Missing docstring in public package
# D105: Missing docstring in magic method
# E501: Line to long
# W503: Line break occurred before a binary operator
# W504: line break after binary operator
ignore =
    D100,
    D101,
    D104,
    D105,
    E501,
    W503,
    W504

per-file-ignores = tests/*:D
